tests/regression/error/hw5_error21.sml
val prog =
  PROGRAM
    {classes=[],decls=[],
     funcs=[("f",{body=[],decls=[],params=[]}),
            ("g",{body=[],decls=[],params=[]}),
            ("f",{body=[],decls=[],params=[]})],stmts=[]} : program
;
